--- a/db/stack.yml
+++ b/db/stack.yml
@@ -5,6 +5,7 @@ services:
 
   mongo:
     image: mongo
+    container_name: mongodb
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
