--- a/exporter/prometheus/prometheus.yml
+++ b/exporter/prometheus/prometheus.yml
@@ -13,13 +13,10 @@ rule_files:
 # A scrape configuration containing exactly one endpoint to scrape.
 scrape_configs:
 
-  - job_name: 'docker'
+  - job_name: 'rsecb'
     static_configs:
-      - targets: ['192.168.1.133:9323']
-    metrics_path: /metrics
-  - job_name: 'eexporter'
-    static_configs:
-      - targets: ['eexporter:9114']
+      - targets: ['rsecb:5005']
+    metrics_path: /stats
 
   - job_name: 'prometheus'
     scrape_interval: 10s
@@ -30,6 +27,21 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ['nodeexporter:9100']
+
+  - job_name: 'mongodbexporter'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['mongodbexporter:9216']
+
+  - job_name: 'pushgateway'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['pushgateway:9091']
+
+  - job_name: 'alertmanager'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['alertmanager:9093']
 
 alerting:
   alertmanagers:
